Implemented a new game button that appears when the current game ends

--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
       <p>The winner is the first to reach 5 points</p>
     </div>
     
+    <div id="info">
+      <p id="endresults">Choose your weapon!</p>
+    </div>
+
     <div id="buttons">
-      <p>Choose your weapon!</p>
-      <p id="endresults"></p>
       <button id="rock">Rock</button>
       <button id="paper">Paper</button>
       <button id="scissors">Scissors</button>
