--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     </div>
 
     <div id="buttons">
-      <button id="rock"><img src="rock.png" class="buttonicon"></button>
-      <button id="paper"><img src="paper.png" class="buttonicon"></button>
-      <button id="scissors"><img src="scissors.png" class="buttonicon"></button>
+      <button id="rock"><img src="images/rock.png" class="buttonicon"></button>
+      <button id="paper"><img src="images/paper.png" class="buttonicon"></button>
+      <button id="scissors"><img src="images/scissors.png" class="buttonicon"></button>
     </div>
 
     <div id="results">
